--- a/FMRSP.vcxproj
+++ b/FMRSP.vcxproj
@@ -148,6 +148,9 @@
     <ClInclude Include="route_based.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
